# ruc

./: .gitignore  CMakeLists.txt  README.md  config.h.in
files/: empresas.sql  ruc.txt
src/: app.h  console.h  empresa_dao.h  file_data.h  http.h  main.cpp  mysql.h  ruc_data.h  tool.h  zar.h  zip.h
src/dao/: empresa_dao.h  mysql.h
src/data/: file_data.h  flag_data.h  ruc_data.h  server_data.h
src/gui/: i_gui.h  insert_gui.h  query_gui.h  setting_gui.h  update_gui.h
src/system/: app.h  console.h
src/tool/: algorithms.h  http.h  zip.h
